ai reference ui polish , alignment fix , ui adjustments 1.2

--- a/src/styles/AiReferenceStyles/AiReferenceJobs.css
+++ b/src/styles/AiReferenceStyles/AiReferenceJobs.css
@@ -99,20 +99,28 @@
 .job-container-form > b{
   width:75%;
   max-width: 800px;
+
 }
 .job-container-form form{
   width:65%;
   max-width: 620px;
+  height: 55vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 14px;
 }
 .job-container-form .form-label{
 font-weight: bold;
 display: flex;
 justify-content: start;
 align-items: center;
+
 }
 .job-container-form input,
 .job-container-form select{
   border-radius: 50px;
+  font-size: 14px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Added shadow for depth */
 
 }
